2004-08-18  John ffitch  <jpff@codemist.co.uk>

	* Engine/fgens.c (gen20): Corrected sinc window

2004-08-12  Michael Gogins <gogins@pipeline.com>

	* Re-arranged sections in csound.pdf to be more helpful for beginners.
	
	* Updated csound.pdf to reflect availability of ASIO on Windows.

2004-08-10  Michael Gogins <gogins@pipeline.com>

	* Implemented threads and mutexes in the Csound API for Windows and Linux,
	in Top/threads.c.
	
	* Implemented low-latency PortAudio with a blocking wrapper that uses 
    mutexes for asynchronus ASIO on MinGW/Windows, in InOut/pa_blocking.c and 
	H/pa_blocking.h.
	
	* Fixed Top/threads.c so it compiles on Linux.

2004-08-05  Michael Gogins <gogins@pipeline.com>

	* Rewrote fluid opcode to break it up into fluidload, fluidcontrol, and 
	fluidout. Added documentation html file.

2004-07-31  Michael Gogins <gogins@pipeline.com>

	* Removed many warnings, especially by using %lf in sscanf for USE_DOUBLE
	and re-ordering ctor lists.
	
	* Added section to build Loris from sources if present.
	
	* SWIG-generated .py files now generated in root directory.

2004-07-25  Michael Gogins <gogins@pipeline.com>

	* Added csoundTableLength, csoundTableGet, csoundTableSet to API.
	
	* Added pyinit opcode.

2004-07-24  Michael Gogins <gogins@pipeline.com>

	* Python opcodes: imported Maurizio Umberto Puxeddu's Python opcodes for 
	Csound 4 from Gabriel Maldonado's CsoundAV sources, updated for Csound 5 with
	opcode error status return values. Currently these opcodes only work in 
	CsoundVST, but I may add a pyinit opcode to make them work in command-line
	csound.

2004-07-23  Michael Gogins <gogins@pipeline.com>

	* Loris: added sources (for Csound 5 opcode ONLY) and prebuilt binaries
    (for MinGW/Windows with USE_DOUBLE ONLY) for _loris.dll, which is both
    a plugin Csound 5 opcode and a Python extension module.
    
    * Modified dl_opcodes.c to print debugging info off the -v option, and
    made the messages clearer.
